# ooRexx

./: CHANGES  CMake-build-readme.txt  CMakeLists.txt  CONTRIBUTORS  CPLv1.0.txt  INSTALL  Makefile.am  NOTICE  RPM_build_notes.txt  ReleaseNotes  Tupfile.lua  acinclude.m4  bootstrap  config.h.in.cmake  configure.ac  files.html  makeorx.bat  oorexx.ver  orxdb.bat  readme.version  release-steps.md  release-steps.txt  touchheaders.bat  touchheaders.sh  unix-like-build.txt  windows-build.txt  xsl.sh.in
api/: oorexxapi.h  oorexxerrors.h  rexx.h  rexxapidefs.h
common/: BitSet.hpp  FlagSet.hpp  SynchronizedBlock.hpp  Utilities.cpp  Utilities.hpp
extensions/csvStream/: csvStream.cls
extensions/dateparser/: dateparser.cls
extensions/hostemu/: cmdparse.cpp  cmdparse.ypp  hostemu.def  hostemu.h  readme.txt
extensions/json/: json.cls
extensions/orxncurses/: ncurses.cls  orxncurses.cpp
extensions/rxftp/: rxftp.cls
extensions/rxmath/: rxmath.cpp
extensions/rxregexp/: automaton.cpp  automaton.hpp  dblqueue.cpp  dblqueue.hpp  regexp.hpp  rxregexp.cls  rxregexp.cpp  rxregexp.def  rxregexp.doc  rxregexp.mak
extensions/rxsock/: mime.cls  orxsock6.cls  orxsock6.cpp  rxsock.cpp  rxsock.h  rxsockfn.cpp  smtp.cls  smtp6.cls  socket.cls  socket6.cls  streamsocket.cls  streamsocket6.cls
interpreter/: files.html  interpreter.mak
interpreter/RexxClasses/: CoreClasses.orx  Serializable.orx  StreamClasses.orx  files.html
interpreter/api/: CallContextStubs.cpp  ContextApi.hpp  InterpreterAPI.cpp  InterpreterInstanceStubs.cpp  MethodContextStubs.cpp  ThreadContextStubs.cpp  files.html
interpreter/behaviour/: ClassTypeCodes.h  ClassTypeCodes.xsl  MethodDictionary.cpp  MethodDictionary.hpp  PrimitiveBehaviourNames.h  PrimitiveBehaviourNames.xsl  PrimitiveBehaviours.cpp  PrimitiveBehaviours.xsl  PrimitiveClasses.xml  RexxBehaviour.cpp  RexxBehaviour.hpp  VirtualFunctionTable.cpp  VirtualFunctionTable.xsl  files.html
interpreter/classes/: ArrayClass.cpp  ArrayClass.hpp  BagClass.cpp  BagClass.hpp  BufferClass.cpp  BufferClass.hpp  ClassClass.cpp  ClassClass.hpp  ContextClass.cpp  ContextClass.hpp  DirectoryClass.cpp  DirectoryClass.hpp  EventSemaphore.cpp  EventSemaphore.hpp  ExceptionClass.cpp  ExceptionClass.hpp  IdentityTableClass.cpp  IdentityTableClass.hpp  IntegerClass.cpp  IntegerClass.hpp  ListClass.cpp  ListClass.hpp  MessageClass.cpp  MessageClass.hpp  MethodClass.cpp  MethodClass.hpp  MutableBufferClass.cpp  MutableBufferClass.hpp  MutexSemaphore.cpp  MutexSemaphore.hpp  NumberStringClass.cpp  NumberStringClass.hpp  NumberStringMath.cpp  NumberStringMath.hpp  NumberStringMath2.cpp  ObjectClass.cpp  ObjectClass.hpp  PackageClass.cpp  PackageClass.hpp  PointerClass.cpp  (+39 more)
interpreter/concurrency/: ActivationApiContexts.hpp  ActivationFrame.cpp  ActivationFrame.hpp  Activity.cpp  Activity.hpp  ActivityDispatcher.cpp  ActivityDispatcher.hpp  ActivityManager.cpp  ActivityManager.hpp  CallbackDispatcher.cpp  CallbackDispatcher.hpp  CommandHandler.cpp  CommandHandler.hpp  ConditionTrappingDispatcher.cpp  ConditionTrappingDispatcher.hpp  ExitHandler.cpp  ExitHandler.hpp  MessageDispatcher.cpp  MessageDispatcher.hpp  RexxActivity.cpp  RexxActivity.hpp  RexxStartDispatcher.cpp  RexxStartDispatcher.hpp  TranslateDispatcher.cpp  TranslateDispatcher.hpp  TrappingDispatcher.cpp  TrappingDispatcher.hpp  files.html
interpreter/execution/: ActivationBase.hpp  ActivationSettings.cpp  ActivationSettings.hpp  ActivationStack.cpp  ActivationStack.hpp  BaseCode.cpp  BaseCode.hpp  BaseExecutable.cpp  BaseExecutable.hpp  CPPCode.cpp  CPPCode.hpp  NativeActivation.cpp  NativeActivation.hpp  NativeActivaton.hpp  NativeCode.cpp  NativeCode.hpp  NumericSetting.hpp  PackageSetting.hpp  RexxActivation.cpp  RexxActivation.hpp  RexxActivationStack.cpp  RexxActivationStack.hpp  RexxCode.cpp  RexxCode.hpp  RexxLocalVariables.cpp  RexxLocalVariables.hpp  RexxNativeActivation.cpp  (+16 more)
kernel/: kernel.mak  rexx.def
lib/: LocalProcessData.cpp  RexxInternalApis.h  RexxLibrary.h  RexxPlatformDefinitions.h  RexxPlatformInterface.h  makedef.cmd  orxwin32.mak  rexxapi.def
rexutils/: rexxutil.mak  rxftp.cls  rxmath.cpp  rxmath.def  rxmath.exp  rxmath.mak  rxsock.c  rxsock.cpp  rxsock.def  rxsock.exp  rxsock.h  rxsock.mak  rxsockfn.c  rxsockfn.cpp  rxwinsys.mak
rexxapi/: APIUtil.h  ASCIIDBCS.h  ASCIISymbols.h  Characters.h  CodePageTables.h  rexxapi.exp  rexxapi.mak  rxqueue.mak  rxsubcom.mak
rxregexp/: automaton.cpp  automaton.hpp  dblqueue.cpp  dblqueue.hpp  regexp.hpp  rxregexp.cls  rxregexp.cpp  rxregexp.def  rxregexp.doc  rxregexp.mak
samples/: CMakeLists.txt  Makefile.am  arithmeticEvaluation.rex  arrayCallback.rex  ccreply.rex  complex.cls  complex.rex  concurrency.rex  constrained.rex  delegation.rex  dynamicMethod.rex  factor.rex  getOoRexxDocs.rex  greply.rex  guess.rex  interface.rex  jabberwocky.txt  ktguard.rex  makestring.rex  month.rex  philfork.rex  pipe.cls  pipe.rex  properties.rex  qdate.rex  qtime.rex  readme  readme.txt  rexxcps.rex  rexxtry.rex  scclient.rex  scserver.rex  semcls.cls  semcls.rex  sfclient.rex  sfserver.rex  singleLinkedList.rex  singleton.cls  sortComposite.rex  sscclient.rex  (+11 more)
samples/api/c++/call.example/: CMakeLists.txt  HelloWorld.rex  Makefile.windows  backward.fnc  readme.txt  runRexxProgram.cpp  stackOverflow.cpp  tooRecursiveTrapped.rex  tooRecursiveUnhandled.rex
samples/api/classic/unix/callrexx/: CMakeLists.txt  Makefile.unix  callrexx2.c  del_macro.rex  example.rex  load_macro.rex  macros.rex  startrx1.rex  startrx2.rex  startrx3.rex
samples/api/classic/unix/rexxapi2/: CMakeLists.txt  apitest2.rex  readme.txt  rexxapi2.c
samples/windows/api/wpipe3/: CMakeLists.txt  rexxapi3.c  rexxapi3.mak
support/: readme.txt
testbinaries/: CMakeLists.txt  Makefile.aix  Makefile.linux  Makefile.windows  orxclassic.cpp  orxclassic.def  orxclassic1.c  orxclassic1.def  orxclassicexits.cpp  orxclassicexits.def  orxexits.def  orxexits.hpp  orxfunction.cpp  orxfunction.def  orxinstance.cpp  orxinvocation.cpp  orxinvocation.def  orxmethod.cpp  orxmethod.def  rexxinstance.cpp
(+2240 files in other folders)
